[package]
name = "rusty-money"
version = "0.4.0"
authors = ["Varun Srinivasan <varunsrin@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/varunsrin/rusty_money"
documentation = "https://docs.rs/rusty-money"
description = """
Parse, format and perform calculations with money safely.    
"""
keywords = ["money", "currency", "iso-4217", "exchange",  "crypto", "cryptocurrency"]
categories = ["data-structures", "rust-patterns", "cryptography::cryptocurrencies"]

[features]
default=["iso"]
iso = []
crypto = []


[dependencies]
rust_decimal = "1.8.1"
rust_decimal_macros = "1.8.1"
