[package]
name = "rusty-money"
version = "0.5.0"
authors = ["Varun Srinivasan <varunsrin@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/varunsrin/rusty_money"
documentation = "https://docs.rs/rusty-money"
description = """
Parse, format and perform calculations with money safely.
"""
keywords = ["money", "currency", "iso-4217", "crypto", "cryptocurrency"]
categories = ["data-structures", "rust-patterns", "cryptography::cryptocurrencies"]

[features]
default = ["iso"]
iso = []
crypto = []
fast = []
serde = ["dep:serde", "rust_decimal/serde-str"]

[dependencies]
rust_decimal = { default-features = false, version = "1.39.0" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rust_decimal_macros = "1.39.0"
serde_json = "1"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
